[MODFISTO-457] Update database API usage (#384)